Add match and ticket